--- a/E-com/package.json
+++ b/E-com/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
+    "d3": "^5.8.0",
     "ngx-bootstrap": "^3.1.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -31,6 +32,7 @@
     "@angular/cli": "~1.7.0",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/d3": "^5.7.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
