--- a/E-com/package.json
+++ b/E-com/package.json
@@ -25,8 +25,11 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
     "d3": "^5.8.0",
+    "ng2-redux": "^5.1.2",
     "ngx-bootstrap": "^3.1.4",
+    "redux": "^4.0.1",
     "rxjs": "^5.5.6",
+    "tassign": "^1.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
